--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.0.1",
   "description": "Weather",
   "devDependencies": {
+    "browser-sync": "^2.11.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-less": "^3.0.5"
+    "gulp-less": "^3.0.5",
+    "gulp-minify-css": "^1.2.3",
+    "gulp-rigger": "^0.5.8",
+    "gulp-uglify": "^1.5.3",
+    "gulp-watch": "^4.3.5"
   }
 }
