--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-rigger": "^0.5.8",
     "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.5",
+    "gulp.spritesmith": "^6.2.0",
     "jshint": "^2.9.1"
   }
 }
