--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.1",
   "description": "Weather",
   "devDependencies": {
+    "backbone": "^1.3.1",
     "browser-sync": "^2.11.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
     "gulp-jshint": "^2.0.0",
     "gulp-less": "^3.0.5",
     "gulp-minify-css": "^1.2.3",
     "gulp-rigger": "^0.5.8",
+    "gulp-size": "^2.0.0",
     "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.5",
     "gulp.spritesmith": "^6.2.0",
